# GitPilot

./: .gitignore  .gitpilot.yml.example  README.md  pyproject.toml
gitpilot/: __init__.py
gitpilot/agent/: branch_agent.py  conflict_agent.py  git_ops_agent.py  orchestrator.py  pr_agent.py  release_agent.py
gitpilot/cli/: display.py  main.py
gitpilot/config/: parser.py  safety.py
gitpilot/db/: queue.py
gitpilot/github/: client.py  models.py
gitpilot/llm/: prompts.py  resolver.py
gitpilot/server/: runner.py  webhook.py
